style: update dcc css

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -14,7 +14,7 @@
         <MCol Cols="4">
             <MCard Class="ma-3" Outlined MinHeight="242" Style="border-radius:16px !important; border: none;">
                 <MCardTitle Style="font-size: medium; flex-wrap:nowrap; padding-bottom: 12px !important;">
-                    <div class="text-h7 text-overflow">@label.TypeName</div>
+                    <div class="emphasis2--text h7 text-overflow">@label.TypeName</div>
                     <MSpacer />
                     <MButton Icon OnClick="()=>ShowLabelModal(label)">
                         <MIcon Size="20" Color="#323D6F">mdi-pencil</MIcon>
