--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -6,7 +6,7 @@
         <div style="min-width:300px; padding:0 24px; display:flex; flex-direction:column; align-items:center; overflow: auto;">
             <div style="width:100%; overflow-x: hidden;" class="text-body2">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
-                    <div class="text-h6" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@_projectDetail.Name</div>
+                    <div class="emphasis--text h6" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@_projectDetail.Name</div>
                 </MRow>
                 <MRow NoGutters Class="text-caption mt-1">
                     @_projectDetail.Identity
@@ -37,11 +37,11 @@
             <h6>@T("Business configuration")</h6>
             <MCard Class="mt-6" Height="163">
                 <MCardTitle Style="font-size: medium; flex-wrap:nowrap;">
-                    <div class="text-h7 text-overflow">
+                    <div class="emphasis2--text h7 text-overflow">
                         <MTextField Rules="_bizNameRules" Disabled="!_isEditBiz" Dense Outlined @bind-Value="@_bizDetail.Name"></MTextField>
                     </div>
                     <div class="mx-4" style="color:#E2E7F4">|</div>
-                    <div class="text-h7 text-overflow">Biz</div>
+                    <div class="emphasis2--text h7 text-overflow">Biz</div>
                     <MSpacer />
                     <MButton Icon OnClick="UpdateBizAsync">
                         @if (!_isEditBiz)
