--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -6,44 +6,46 @@
         <div style="min-width:300px; padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: auto;">
             <div style="width:100%;" class="text-body2">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
-                    <div class="text-h6">@_appDetail.Name</div>
-
-                    <MMenu OffsetY>
-                        <ActivatorContent>
-                            <MButton Icon @attributes="@context.Attrs">
-                                <MIcon Color="black">mdi-dots-horizontal</MIcon>
-                            </MButton>
-                        </ActivatorContent>
-                        <ChildContent>
-                            @*<MList Disabled Dense>
-                            <MListItem Dense>
-                            <MIcon Color="#323D6F" Class="mr-4">mdi-key-outline</MIcon>
-                            <MListItemContent>
-                            <MListItemTitle>管理密钥</MListItemTitle>
-                            </MListItemContent>
-                            </MListItem>
-                            </MList>
-                            <MList Disabled Dense>
-                            <MListItem Dense>
-                            <MIcon Color="#323D6F" Class="mr-4">mdi-refresh</MIcon>
-                            <MListItemContent>
-                            <MListItemTitle>强制刷新密钥</MListItemTitle>
-                            </MListItemContent>
-                            </MListItem>
-                            </MList>*@
-                            @if (ConfigObjectType == ConfigObjectType.App)
-                            {
-                                <MList Dense>
-                                    <MListItem Dense OnClick="()=>ShowCloneModalAsync()">
-                                        <MIcon Color="#323D6F" Size="20" Class="mr-4">far fa-copy</MIcon>
-                                        <MListItemContent>
-                                            <MListItemTitle>@T("Clone config")</MListItemTitle>
-                                        </MListItemContent>
-                                    </MListItem>
+                    <div class="full-width d-flex">
+                        <div class="emphasis--text h6">@_appDetail.Name</div>
+                        <MSpacer></MSpacer>
+                        <MMenu OffsetY>
+                            <ActivatorContent>
+                                <MButton Icon @attributes="@context.Attrs">
+                                    <MIcon Color="black">mdi-dots-horizontal</MIcon>
+                                </MButton>
+                            </ActivatorContent>
+                            <ChildContent>
+                                @*<MList Disabled Dense>
+                                <MListItem Dense>
+                                <MIcon Color="#323D6F" Class="mr-4">mdi-key-outline</MIcon>
+                                <MListItemContent>
+                                <MListItemTitle>管理密钥</MListItemTitle>
+                                </MListItemContent>
+                                </MListItem>
                                 </MList>
-                            }
-                        </ChildContent>
-                    </MMenu>
+                                <MList Disabled Dense>
+                                <MListItem Dense>
+                                <MIcon Color="#323D6F" Class="mr-4">mdi-refresh</MIcon>
+                                <MListItemContent>
+                                <MListItemTitle>强制刷新密钥</MListItemTitle>
+                                </MListItemContent>
+                                </MListItem>
+                                </MList>*@
+                                @if (ConfigObjectType == ConfigObjectType.App)
+                                {
+                                    <MList Dense>
+                                        <MListItem Dense OnClick="()=>ShowCloneModalAsync()">
+                                            <MIcon Color="#323D6F" Size="20" Class="mr-4">far fa-copy</MIcon>
+                                            <MListItemContent>
+                                                <MListItemTitle>@T("Clone config")</MListItemTitle>
+                                            </MListItemContent>
+                                        </MListItem>
+                                    </MList>
+                                }
+                            </ChildContent>
+                        </MMenu>
+                    </div>
                 </MRow>
                 <MRow NoGutters Class="text-caption">
                     @_appDetail.Identity
@@ -117,7 +119,7 @@
                             <MExpansionPanel Value="configObject.Id">
                                 <MExpansionPanelHeader Context="_">
                                     <ChildContent>
-                                        <div class="text-h6 d-flex align-center">
+                                        <div class="emphasis--text h6 d-flex align-center">
                                             @if (configObject.FromRelation)
                                             {
                                                 <MIcon Color="primary" Class="mr-2">mdi-link-variant</MIcon>
@@ -231,7 +233,7 @@
                             <MExpansionPanel Value="configObject.Id">
                                 <MExpansionPanelHeader Context="_">
                                     <ChildContent>
-                                        <div class="text-h6 d-flex align-center">
+                                        <div class="emphasis--text h6 d-flex align-center">
                                             @if (configObject.FromRelation)
                                             {
                                                 <MIcon Color="primary" Class="mr-2">mdi-link-variant</MIcon>
@@ -445,7 +447,7 @@
                             <MExpansionPanel Value="configObject.Id">
                                 <MExpansionPanelHeader Context="_">
                                     <ChildContent>
-                                        <div class="text-h6 d-flex align-center">
+                                        <div class="emphasis--text h6 d-flex align-center">
                                             @if (configObject.FromRelation)
                                             {
                                                 <MIcon Color="primary" Class="mr-2">mdi-link-variant</MIcon>
@@ -570,7 +572,7 @@
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_propertyConfigModal.Data">
         <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
             <div>
-                <div class="text-h6 d-flex align-center">
+                <div class="emphasis--text h6 d-flex align-center">
                     @_selectConfigObject.Name
                     <span class="ml-3 text-caption">|</span>
                     <sapn class="ml-2 text-caption">Properties</sapn>
@@ -590,7 +592,7 @@
         <MForm Class="full-height" Context="formContext" EnableValidation Model="_configObjectReleaseModal.Data">
             <div class="d-flex flex-column" style="width:100%; height: 100%; padding: 48px 228px">
                 <div class="full-height" style="overflow-y: auto;">
-                    <div class="text-h6 d-flex align-center">
+                    <div class="emphasis--text h6 d-flex align-center">
                         @_selectConfigObject.Name
                         <span class="ml-3 text-caption">|</span>
                         <sapn class="ml-2 text-caption">@_selectConfigObject.FormatLabelCode</sapn>
@@ -680,7 +682,7 @@
 <SSheetDialog @bind-Value="_showReleaseHistory" Title="@T("Release history")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
         <div>
-            <div class="text-h6 d-flex align-center">
+            <div class="emphasis--text h6 d-flex align-center">
                 @T("Config object name")
                 <span class="ml-3 text-caption">|</span>
                 <sapn class="ml-2 text-caption">@_releaseHistory.FormatLabelCode</sapn>
@@ -890,7 +892,7 @@
                                                              Outlined
                                                              Dense
                                                              HideDetails="true"
-                                                             Items="_cloneApps"
+                                                             Items="_cloneApps.Where(app=>app.Id!=_appDetail.Id).ToList()"
                                                              ItemText="l=>l.Name"
                                                              ItemValue="l=>l.Id">
                                                     </MSelect>
@@ -932,7 +934,7 @@
                         <MCheckbox Value="CloneConfigObjectAllChecked"
                                    ValueChanged="CloneConfigObjectAllCheckedChanged"
                                    HideDetails="true"
-                                   Label="@(_cloneConfigObjectAllChecked ? @T("Deselect all") : @T("Select all"))"
+                                   Label="@(CloneConfigObjectAllChecked ? @T("Deselect all") : @T("Select all"))"
                                    Color="primary"></MCheckbox>
                         <MExpansionPanels Flat Accordion>
                             @foreach (var configObject in _configObjects.Where(c => !c.FromRelation))
