style: remove error style

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
@@ -58,7 +58,7 @@
     public RenderFragment ChildContent { get; set; } = default!;
 
     [Parameter]
-    public string Style { get; set; } = "border: 1px solid #E2E7F4; sss";
+    public string Style { get; set; } = "border: 1px solid #E2E7F4;";
 
     [Parameter]
     public bool IsPin { get; set; }
