--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -14,7 +14,7 @@
         <MCol Cols="4">
             <MCard Class="ma-3" Outlined MinHeight="242" Style="border-radius:16px !important; border: none;">
                 <MCardTitle Style="font-size: medium; flex-wrap:nowrap; padding-bottom: 12px !important;">
-                    <div class="text-h7 text-overflow">@label.TypeName</div>
+                    <div class="emphasis2--text h7 text-overflow">@label.TypeName</div>
                     <MSpacer />
                     <MButton Icon OnClick="()=>ShowLabelModal(label)">
                         <MIcon Size="20" Color="#323D6F">mdi-pencil</MIcon>
@@ -81,7 +81,7 @@
     </MCol>
 </MRow>
 
-<SheetDialog Value="_labelModal.Visible" ValueChanged="LabelModalValueChanged" Title="@T("Edit")" Icon="mdi-circle" IconColor="success">
+<SSheetDialog Value="_labelModal.Visible" ValueChanged="LabelModalValueChanged" Title="@T("Edit")" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_labelModal.Data">
         <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
             <div class="full-height" style="overflow-y: auto;">
@@ -115,4 +115,4 @@
             </div>
         </div>
     </MForm>
-</SheetDialog>
+</SSheetDialog>
