--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/AddConfigObjectModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/AddConfigObjectModal.razor
@@ -1,10 +1,10 @@
 ﻿@inherits MasaCompontentBase
 
-<SheetDialog Value="Value" ValueChanged="SheetDialogValueChangedAsync" Title="@T("Create config object")" Icon="mdi-circle" IconColor="success">
+<SSheetDialog Value="Value" ValueChanged="SheetDialogValueChangedAsync" Title="@T("Create config object")" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_addConfigObjectModal.Data">
         <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
             <div class="full-height" style="overflow: auto;">
-                <div class="text-h6 d-flex align-center">
+                <div class="emphasis--text h6 d-flex align-center">
                     @AppDetail.Name
                     <span class="ml-3 text-caption">|</span>
                     <sapn class="ml-2 text-caption">@AppDetail.Identity</sapn>
@@ -31,8 +31,8 @@
                 </MChipGroup>
             </div>
             <div class="d-flex justify-end align-end" style="width:100%;">
-                <DefaultButton Small OnClick="()=>AddConfigObject(formContext)">@T("Submit")</DefaultButton>
+                <SButton Small OnClick="()=>AddConfigObject(formContext)">@T("Submit")</SButton>
             </div>
         </div>
     </MForm>
-</SheetDialog>
+</SSheetDialog>
