--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
@@ -1,9 +1,9 @@
 ﻿@inherits MasaCompontentBase
 
-<SheetDialog Value="Value" ValueChanged="SheetDialogValueChanged" Title="@T("Relation public config")" Icon="mdi-circle" IconColor="success">
+<SSheetDialog Value="Value" ValueChanged="SheetDialogValueChanged" Title="@T("Relation public config")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
         <div class="full-height" style="overflow: auto;">
-            <div class="text-h6 d-flex align-center">
+            <div class="emphasis--text h6 d-flex align-center">
                 @AppDetail.Name
                 <span class="ml-3 text-caption">|</span>
                 <sapn class="ml-2 text-caption">@AppDetail.Identity</sapn>
@@ -98,4 +98,4 @@
             <MButton Class="rounded-pill" Color="primary" Width="100" OnClick="HandleOnSubmitAsync">@T("Submit")</MButton>
         </div>
     </div>
-</SheetDialog>
+</SSheetDialog>
