--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -4,21 +4,26 @@
 <div class="d-flex">
     <MNavigationDrawer Right Permanent Class="rounded-4 py-6" Width="300" Style="height: calc(100vh - 192px);">
         <div style="min-width:300px; padding:0 24px; display:flex; flex-direction:column; align-items:center; overflow: auto;">
-            <div style="width:100%; overflow-x: hidden;" class="text-body2">
+            <div style="width:100%; overflow-x: hidden;" class="regular--text">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
                     <div class="emphasis--text h6" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@_projectDetail.Name</div>
                 </MRow>
-                <MRow NoGutters Class="regular3--text body2 mt-1">
+                <MRow NoGutters Class="body2">
                     @_projectDetail.Identity
                 </MRow>
-                <MRow NoGutters Class="mt-1">
-                    @T("AppCount")：@AppCount
+                <MRow NoGutters Class="mt-2 body2">
+                    @T("AppCount")：<span class="subtitle2">@AppCount</span>
                 </MRow>
-                <MRow NoGutters Class="mt-4">
+                <MRow NoGutters Class="mt-4 body2">
                     @_projectDetail.Description
                 </MRow>
                 <MRow NoGutters Class="regular3--text body2 mt-6">@T("Participate team")</MRow>
-                <MRow NoGutters Class="mt-4">@_projectDetail.TeamId</MRow>
+                <MRow NoGutters Class="mt-4">
+                    <MAvatar Height="24" Width="24" MinHeight="24" MinWidth="24" Class="mr-3">
+                        <MImage Height="24" Width="24" Src="@_projectTeamDetail.Avatar"></MImage>
+                    </MAvatar>
+                    @_projectTeamDetail.Name
+                </MRow>
                 <MRow NoGutters Class="regular3--text body2 mt-6">@T("Environment/Cluster")</MRow>
                 <div style="display:flex; flex-direction:column;align-items:start">
                     @{
@@ -44,7 +49,7 @@
                         }
                         else
                         {
-                            <STextField HideDetails="true" Dense  Outlined @bind-Value="@_bizDetail.Name"></STextField>
+                            <STextField HideDetails="true" Dense Outlined @bind-Value="@_bizDetail.Name"></STextField>
                         }
                     </div>
                     <div class="mx-4" style="color:#E2E7F4">|</div>
