fix: update style

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
@@ -26,7 +26,7 @@
                 </div>
                 @if (ShowEditInfo)
                 {
-                    <div class="mx-2 d-flex justify-end text-caption text-overflow" style="margin:14px 0 0 0;">
+                    <div class="mx-2 d-flex justify-end regular3--text btn text-overflow" style="margin:14px 0 0 0;">
                         @EditInfo
                     </div>
                 }
