--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/Editor.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/Editor.razor
@@ -1,4 +1,4 @@
-﻿<MCard Outlined Flat Color="@Color" Style="padding:6px 6px 6px 0;">
+﻿<MCard Outlined Flat Color="@Color" Class="rounded-5" Style="padding:6px 6px 6px 0;">
     <div style="width: 100%; min-height: 312px; height: 312px; overflow-y: auto; ">
         <div style="display: flex;height:@((_lineCount+1)*24)px">
             <div style="width:50px;text-align:center;color:rgb(46,117,182);">
