--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Label"
 @inherits MasaCompontentBase
 
-<MTextField @bind-Value="_typeName" OnKeyDown="SearchAsync" Class="rounded-2" Height="40" Flat Dense Solo HideDetails="@("auto")" Placeholder="@T("Search")">
+<MTextField @bind-Value="_typeName" OnKeyDown="SearchAsync" Class="rounded-2" Height="40" Flat Solo Placeholder="@T("Search")">
     <PrependInnerContent>
         <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
     </PrependInnerContent>
@@ -19,7 +19,7 @@
                     <MButton Icon OnClick="()=>ShowLabelModal(label)">
                         <MIcon Size="20" Color="#323D6F">mdi-pencil</MIcon>
                     </MButton>
-                </MCardTitle>
+                </MCardTitle> 
                 <MCardSubtitle>
                     <div class="text-overflow">@label.TypeCode</div>
                     <div class="mt-4" style="display:-webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;text-overflow: ellipsis;overflow: hidden; color: #485585">
@@ -59,7 +59,7 @@
                                 </ChildContent>
                             </MMenu>
                         </div>
-                        <div class="mx-2 d-flex justify-end text-caption text-overflow" style="margin:16px 0 0 0;">
+                        <div class="mx-2 d-flex justify-end regular3--text btn text-overflow" style="margin:16px 0 0 0;">
                             <span style="font-size: 12px; color: #323D6F;">叶子</span>
                             <span class="mx-2" style="color:#E2E7F4">|</span>
                             <span style="font-size: 12px; color: #A3AED0;">编辑于1小时前</span>
