--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
@@ -5,8 +5,8 @@
         <div class="full-height" style="overflow: auto;">
             <div class="emphasis--text h6 d-flex align-center">
                 @AppDetail.Name
-                <span class="ml-3 text-caption">|</span>
-                <sapn class="ml-2 text-caption">@AppDetail.Identity</sapn>
+                <span class="ml-3 regular3--text btn">|</span>
+                <sapn class="ml-2 regular3--text btn">@AppDetail.Identity</sapn>
             </div>
             <p class="neutral--text mt-12" style="font-size:14px; font-weight:700;">@T("Need associated cluster")</p>
             <MChipGroup Multiple Column @bind-Values="_selectToEnvClusterIds">
@@ -19,9 +19,9 @@
                 }
             </MChipGroup>
             <p class="neutral--text mt-12" style="font-size:14px; font-weight:700;">@T("Select public config object")</p>
-            <MRow NoGutters>
+            <MRow NoGutters Class="mb-6">
                 <MCol>
-                    <MSelect Value="_selectFromEnvClusterId"
+                    <SSelect Value="_selectFromEnvClusterId"
                              ValueChanged="SelectEnvClusterValueChanged"
                              Class="pr-3"
                              TValue="int"
@@ -30,14 +30,13 @@
                              Label="@T("Environment cluster")"
                              MenuProps="props => props.OffsetY = true"
                              Outlined
-                             Dense
                              Items="_allEnvClusters"
                              ItemText="l=>l.EnvironmentClusterName"
                              ItemValue="l=>l.Id">
-                    </MSelect>
+                    </SSelect>
                 </MCol>
                 <MCol>
-                    <MSelect Value="_selectPublicConfigObjectId"
+                    <SSelect Value="_selectPublicConfigObjectId"
                              ValueChanged="SelectConfigObjectValueChanged"
                              Class="pl-3"
                              TValue="int"
@@ -50,31 +49,31 @@
                              Items="_publicConfigObjects"
                              ItemText="l=>l.Name"
                              ItemValue="l=>l.Id">
-                    </MSelect>
+                    </SSelect>
                 </MCol>
             </MRow>
             @if (_selectConfigObject.FormatLabelCode.Trim().ToLower() == "properties")
             {
-                <div style="border-radius: 8px; border: 1px solid #E2E7F4; padding:12px 24px;">
-                    <MRow Style="color: #A3AED0; font-size: 14px;" NoGutters>
-                        <span class="d-flex justify-center" style="width: 5%">@T("State")</span>
+                <div style="border-radius: 8px; border: 1px solid #E2E7F4;">
+                    <MRow Style="color: #A3AED0; font-size: 14px; margin:12px 24px;" NoGutters Align="AlignTypes.Center">
+                        <span style="width: 5%">@T("State")</span>
                         <span style="width: 47.5%">Key</span>
                         <span style="width: 47.5%">Value</span>
                     </MRow>
-                    <MDivider Class="mt-3 mx-n6"></MDivider>
+                    <MDivider Class="mt-3"></MDivider>
                     @foreach (var item in _selectConfigObject.ConfigObjectPropertyContents)
                     {
-                        <MRow Class="pt-4" NoGutters Justify="JustifyTypes.SpaceBetween">
+                        <MRow Class="my-3 mx-6" NoGutters Justify="JustifyTypes.SpaceBetween" Align="AlignTypes.Center">
                             @if (item.IsRelationed)
                             {
-                                <MIcon Style="width: 5%" Color="#7681AB">mdi-link-variant</MIcon>
+                                <MIcon Class="d-flex justify-start" Style="width: 5%" Color="#7681AB">mdi-link-variant</MIcon>
                             }
                             else
                             {
-                                <MIcon Style="width: 5%" Color="#7681AB">mdi-link-variant-off</MIcon>
+                                <MIcon Class="d-flex justify-start" Style="width: 5%" Color="#7681AB">mdi-link-variant-off</MIcon>
                             }
                             <div style="width: 47.5%">@item.Key</div>
-                            <MTextField style="width: 47.5%" Dense HideDetails="true" Outlined TValue="string" Value="item.Value" ValueChanged="value=>PropertyValueChanged(value,item)"></MTextField>
+                            <STextField style="width: 47.5%" HideDetails="true" Outlined TValue="string" Value="item.Value" ValueChanged="value=>PropertyValueChanged(value,item)"></STextField>
                         </MRow>
                     }
                 </div>
@@ -95,7 +94,7 @@
             }
         </div>
         <div class="d-flex justify-end align-end" style="width:100%;">
-            <MButton Class="rounded-pill" Color="primary" Width="100" OnClick="HandleOnSubmitAsync">@T("Submit")</MButton>
+            <SButton Small Color="primary" Width="100" OnClick="HandleOnSubmitAsync">@T("Submit")</SButton>
         </div>
     </div>
 </SSheetDialog>
