--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -33,7 +33,7 @@
                 <div class="pr-6" style="width: calc(100% - 300px); display:block;">
                     <div class="rounded-5 pa-6" style="background:#fff;overflow: hidden;">
                         <div class="d-flex mb-6">
-                            <MTextField @bind-Value="_projectName" OnKeyDown="SearchProject" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the project name and press enter to query")">
+                            <MTextField @bind-Value="_projectName" OnKeyDown="SearchProject" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-background" HideDetails="@("auto")" Placeholder="@T("Please enter the project name and press enter to query")">
                                 <PrependInnerContent>
                                     <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
                                 </PrependInnerContent>
@@ -50,9 +50,9 @@
                                                 <span style="display:flex;align-items:center;margin-right:10px;">
                                                     <div class="emphasis--text h6" @onclick:stopPropagation @onclick="()=>NavigateToAppAsync(project.Id)">
                                                         @project.Name
-                                                        <span class="ml-2 text-caption">|</span>
-                                                        <sapn class="ml-1 text-caption">@T("AppCount"):@apps.Count</sapn>
-                                                        <div class="text-caption d-flex" style="padding:0">
+                                                        <span class="ml-2 regular3--text btn">|</span>
+                                                        <sapn class="ml-1 regular3--text btn">@T("AppCount"):@apps.Count</sapn>
+                                                        <div class="regular3--text btn d-flex" style="padding:0">
                                                             @{
                                                                 string backgroundColor;
                                                                 switch (project.LabelCode.ToLower())
@@ -136,16 +136,17 @@
                         <MRow NoGutters Class="mt-6">
                             <div class="emphasis--text h6">@_userTeam.Name</div>
                         </MRow>
-                        <MRow NoGutters Class="mt-1 text-body2">
-                            @T("ProjectCount")：@_projects.Count
+                        <MRow NoGutters Class="mt-1 regular--text body2">
+                            @T("ProjectCount")：
+                            <span class="subtitle2">@_projects.Count</span>
                         </MRow>
-                        <MRow NoGutters Class="mt-4 text-body2">
+                        <MRow NoGutters Class="mt-4 regular--text body2">
                             @_userTeam.Description
                         </MRow>
                         <MRow NoGutters Class="regular3--text btn mt-6">@T("Admin")</MRow>
                         @foreach (var item in _userTeam.Admins)
                         {
-                            <MRow Align="AlignTypes.Center" NoGutters Class="mt-4 text-body2">
+                            <MRow Align="AlignTypes.Center" NoGutters Class="mt-4 regular--text body2">
                                 <MAvatar Class="mr-3">
                                     <MImage Height="48" Width="48" Src="@item.Avatar"></MImage>
                                 </MAvatar>
@@ -155,7 +156,7 @@
                         <MRow NoGutters Class="regular3--text btn mt-6">@T("Members")</MRow>
                         @foreach (var item in _userTeam.Members)
                         {
-                            <MRow Align="AlignTypes.Center" NoGutters Class="mt-4 text-body2">
+                            <MRow Align="AlignTypes.Center" NoGutters Class="mt-4 regular--text body2">
                                 <MAvatar MinHeight="40" MinWidth="40" Height="40" Width="40" Class="mr-3">
                                     <MImage Height="40" Width="40" Src="@item.Avatar"></MImage>
                                 </MAvatar>
