--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
@@ -5,7 +5,7 @@
             <div class="mx-3" style="color:#E2E7F4">|</div>
             <div class="emphasis2--text h7 text-overflow">@App.Type</div>
             <MSpacer />
-            <MButton Icon OnClick="OnPinClick">
+            <MButton StopPropagation Icon OnClick="OnPinClick">
                 <MIcon Color="@(IsPin ? "#FFB547" : "")" Size="20">mdi-pin</MIcon>
             </MButton>
         </MCardTitle>
@@ -13,25 +13,11 @@
             <div class="body2 regular3--text text-overflow">@App.Identity</div>
             <div class="text-overflow regular--text body text-overflow mt-4">@App.Description</div>
         </MCardSubtitle>
-        <MCardActions Style="position:absolute;bottom:0;left:0;right:0; padding-bottom:12px !important;">
-            <div class="d-flex flex-column" style="overflow:hidden; width:100%;">
-                <div class="mx-2 d-flex justify-space-between" Style="height:24px;white-space: nowrap;overflow: hidden;">
-                    <div class="mr-3" style="overflow:hidden">
-                        @foreach (var item in EnvironmentClusters)
-                        {
-                            <EnvClusterChip Style="margin:0 12px 1px 0;" EnvironmentName="@item.EnvironmentName" EnvironmentColor="@item.EnvironmentColor" ClusterName="@item.ClusterName" />
-                        }
-                    </div>
-                    @ChildContent
-                </div>
-                @if (ShowEditInfo)
-                {
-                    <div class="mx-2 d-flex justify-end regular3--text btn text-overflow" style="margin:14px 0 0 0;">
-                        @EditInfo
-                    </div>
-                }
-            </div>
-        </MCardActions>
+        <div class="full-width" @onclick:stopPropagation>
+            <MCardActions Class="px-0 mx-4" Style="position:absolute;bottom:0;left:0;right:0; padding-bottom:12px !important;">
+                @ChildContent
+            </MCardActions>
+        </div>
     </MCard>
 </MHover>
 
