--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -90,30 +90,17 @@
                                                 @foreach (var app in apps.Where(app => app.IsPinned).Take(3))
                                                 {
                                                     <MCol Lg="4" Md="6" Sm="12">
-                                                        <AppCard OnPinClick="()=>AppPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
-                                                            <MMenu Transition="slide-y-transition" Bottom>
-                                                                <ActivatorContent>
-                                                                    <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
-                                                                        <MIcon Color="black">mdi-dots-horizontal</MIcon>
-                                                                    </MButton>
-                                                                </ActivatorContent>
-
-                                                                <ChildContent>
-                                                                    <MList Dense>
-                                                                        @foreach (var item in app.EnvironmentClusters)
-                                                                        {
-                                                                            <MListItem OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, app.ProjectId, item.Id, ConfigObjectType.App))">
-                                                                                <MListItemContent>
-                                                                                    <MListItemTitle>
-                                                                                        <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
-                                                                                        <span>@item.ClusterName</span>
-                                                                                    </MListItemTitle>
-                                                                                </MListItemContent>
-                                                                            </MListItem>
-                                                                        }
-                                                                    </MList>
-                                                                </ChildContent>
-                                                            </MMenu>
+                                                        <AppCard OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, app.ProjectId, app.EnvironmentClusters[0].Id, ConfigObjectType.App))" OnPinClick="()=>AppPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                                            <MChipGroup Class="env-cluster-chip-group" ActiveClass="primary--text">
+                                                                @foreach (var item in app.EnvironmentClusters)
+                                                                {
+                                                                    <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, app.ProjectId, item.Id, ConfigObjectType.App))"
+                                                                        Style="margin:0 12px 1px 0;"
+                                                                        EnvironmentName="@item.EnvironmentName"
+                                                                        EnvironmentColor="@item.EnvironmentColor"
+                                                                        ClusterName="@item.ClusterName" />
+                                                                }
+                                                            </MChipGroup>
                                                         </AppCard>
                                                     </MCol>
                                                 }
